// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Api should search, load and save a project 1`] = `
Object {
  "description": "testSuunnitteluvaihePerustiedot",
  "obj": Object {
    "__typename": "SuunnitteluVaihe",
    "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi suunnitteluvaihe",
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "HankkeenKuvaukset",
    },
    "julkinen": undefined,
    "palautteet": undefined,
    "palautteidenVastaanottajat": Array [
      "A000111",
    ],
    "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
    "vuorovaikutukset": Array [],
  },
}
`;

exports[`Api should search, load and save a project 2`] = `
Object {
  "description": "testSuunnitteluvaiheVuorovaikutus",
  "obj": Object {
    "__typename": "SuunnitteluVaihe",
    "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi suunnitteluvaihe",
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "HankkeenKuvaukset",
    },
    "julkinen": undefined,
    "palautteet": undefined,
    "palautteidenVastaanottajat": Array [
      "A000111",
    ],
    "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
    "vuorovaikutukset": Array [
      Object {
        "__typename": "Vuorovaikutus",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
        "esittelyaineistot": undefined,
        "ilmoituksenVastaanottajat": Object {
          "__typename": "IlmoituksenVastaanottajat",
          "kunnat": Array [
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "Mikkeli",
              "sahkoposti": "mikkeli@mikke.li",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": " Juva",
              "sahkoposti": "juva@ju.va",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": " Savonlinna",
              "sahkoposti": "savonlinna@savonlin.na",
            },
          ],
          "viranomaiset": Array [
            Object {
              "__typename": "ViranomaisVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "ETELA_SAVO_ELY",
              "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
            },
          ],
        },
        "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
        "suunnitelmaluonnokset": undefined,
        "suunnittelumateriaali": undefined,
        "videot": Array [
          Object {
            "__typename": "Linkki",
            "nimi": "Esittely 1",
            "url": "https://video",
          },
        ],
        "vuorovaikutusJulkaisuPaiva": "2022-03-23",
        "vuorovaikutusNumero": 1,
        "vuorovaikutusTilaisuudet": Array [
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "15:00",
            "esitettavatYhteystiedot": undefined,
            "kaytettavaPalvelu": "TEAMS",
            "linkki": "https://linkki_tilaisuuteen",
            "nimi": "Lorem ipsum 1",
            "paattymisAika": "16:00",
            "paivamaara": "2022-03-04",
            "tyyppi": "VERKOSSA",
          },
          Object {
            "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": undefined,
            "nimi": "Lorem ipsum two 1",
            "osoite": "Katu 123",
            "paattymisAika": "11:00",
            "paikka": "Kunnantalo",
            "paivamaara": "2022-04-05",
            "postinumero": "00100",
            "postitoimipaikka": "Helsinki",
            "tyyppi": "PAIKALLA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "11:00",
            "paivamaara": "2022-04-05",
            "projektiYhteysHenkilot": Array [
              "A000112",
            ],
            "tyyppi": "SOITTOAIKA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "12:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "13:00",
            "paivamaara": "2033-04-05",
            "tyyppi": "SOITTOAIKA",
          },
        ],
        "vuorovaikutusYhteysHenkilot": Array [
          "A000112",
        ],
      },
      Object {
        "__typename": "Vuorovaikutus",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
        "esittelyaineistot": undefined,
        "ilmoituksenVastaanottajat": Object {
          "__typename": "IlmoituksenVastaanottajat",
          "kunnat": Array [
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "Mikkeli",
              "sahkoposti": "mikkeli@mikke.li",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": " Juva",
              "sahkoposti": "juva@ju.va",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": " Savonlinna",
              "sahkoposti": "savonlinna@savonlin.na",
            },
          ],
          "viranomaiset": Array [
            Object {
              "__typename": "ViranomaisVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "ETELA_SAVO_ELY",
              "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
            },
          ],
        },
        "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
        "suunnitelmaluonnokset": undefined,
        "suunnittelumateriaali": undefined,
        "videot": Array [
          Object {
            "__typename": "Linkki",
            "nimi": "Esittely 2",
            "url": "https://video",
          },
        ],
        "vuorovaikutusJulkaisuPaiva": "2022-03-23",
        "vuorovaikutusNumero": 2,
        "vuorovaikutusTilaisuudet": Array [
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "15:00",
            "esitettavatYhteystiedot": undefined,
            "kaytettavaPalvelu": "TEAMS",
            "linkki": "https://linkki_tilaisuuteen",
            "nimi": "Lorem ipsum 2",
            "paattymisAika": "16:00",
            "paivamaara": "2022-03-04",
            "tyyppi": "VERKOSSA",
          },
          Object {
            "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": undefined,
            "nimi": "Lorem ipsum two 2",
            "osoite": "Katu 123",
            "paattymisAika": "11:00",
            "paikka": "Kunnantalo",
            "paivamaara": "2022-04-05",
            "postinumero": "00100",
            "postitoimipaikka": "Helsinki",
            "tyyppi": "PAIKALLA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "11:00",
            "paivamaara": "2022-04-05",
            "projektiYhteysHenkilot": Array [
              "A000112",
            ],
            "tyyppi": "SOITTOAIKA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "12:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "13:00",
            "paivamaara": "2033-04-05",
            "tyyppi": "SOITTOAIKA",
          },
        ],
        "vuorovaikutusYhteysHenkilot": Array [
          "A000112",
        ],
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 3`] = `
Object {
  "description": "added A000111 to vuorovaikutus and vuorovaikutustilaisuus",
  "obj": Object {
    "added": Object {
      "vuorovaikutukset": Object {
        "1": Object {
          "vuorovaikutusTilaisuudet": Object {
            "2": Object {
              "projektiYhteysHenkilot": Object {
                "1": "A000111",
              },
            },
          },
          "vuorovaikutusYhteysHenkilot": Object {
            "1": "A000111",
          },
        },
      },
    },
    "deleted": Object {},
    "updated": Object {},
  },
}
`;

exports[`Api should search, load and save a project 4`] = `
Object {
  "description": "saveAndVerifyAineistoSave #initialSave",
  "obj": Object {
    "__typename": "Vuorovaikutus",
    "esitettavatYhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "esittelyaineistot": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2303050596.2160380418",
        "jarjestys": 1,
        "nimi": "tokatiedosto_toka.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2830496143.3575999363",
        "jarjestys": 2,
        "nimi": "ekatiedosto_eka.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "Mikkeli",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": " Juva",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": " Savonlinna",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
    "suunnitelmaluonnokset": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 1,
        "kategoriaId": "T1xx",
        "nimi": "karttakuvalla_tiedosto.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "suunnittelumateriaali": undefined,
    "videot": Array [
      Object {
        "__typename": "Linkki",
        "nimi": "Esittely 1",
        "url": "https://video",
      },
    ],
    "vuorovaikutusJulkaisuPaiva": "2022-03-23",
    "vuorovaikutusNumero": 1,
    "vuorovaikutusTilaisuudet": Array [
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "15:00",
        "esitettavatYhteystiedot": undefined,
        "kaytettavaPalvelu": "TEAMS",
        "linkki": "https://linkki_tilaisuuteen",
        "nimi": "Lorem ipsum 1",
        "paattymisAika": "16:00",
        "paivamaara": "2022-03-04",
        "tyyppi": "VERKOSSA",
      },
      Object {
        "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": undefined,
        "nimi": "Lorem ipsum two 1",
        "osoite": "Katu 123",
        "paattymisAika": "11:00",
        "paikka": "Kunnantalo",
        "paivamaara": "2022-04-05",
        "postinumero": "00100",
        "postitoimipaikka": "Helsinki",
        "tyyppi": "PAIKALLA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "11:00",
        "paivamaara": "2022-04-05",
        "projektiYhteysHenkilot": Array [
          "A000112",
        ],
        "tyyppi": "SOITTOAIKA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "12:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "13:00",
        "paivamaara": "2033-04-05",
        "tyyppi": "SOITTOAIKA",
      },
    ],
    "vuorovaikutusYhteysHenkilot": Array [
      "A000112",
    ],
  },
}
`;

exports[`Api should search, load and save a project 5`] = `
Object {
  "description": "saveAndVerifyAineistoSave #updateNimiAndJarjestys",
  "obj": Object {
    "__typename": "Vuorovaikutus",
    "esitettavatYhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "esittelyaineistot": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2303050596.2160380418",
        "jarjestys": 11,
        "nimi": "new tokatiedosto_toka.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2830496143.3575999363",
        "jarjestys": 12,
        "nimi": "new ekatiedosto_eka.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "Mikkeli",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": " Juva",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": " Savonlinna",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
    "suunnitelmaluonnokset": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 11,
        "kategoriaId": "T1xx",
        "nimi": "new karttakuvalla_tiedosto.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "suunnittelumateriaali": undefined,
    "videot": Array [
      Object {
        "__typename": "Linkki",
        "nimi": "Esittely 1",
        "url": "https://video",
      },
    ],
    "vuorovaikutusJulkaisuPaiva": "2022-03-23",
    "vuorovaikutusNumero": 1,
    "vuorovaikutusTilaisuudet": Array [
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "15:00",
        "esitettavatYhteystiedot": undefined,
        "kaytettavaPalvelu": "TEAMS",
        "linkki": "https://linkki_tilaisuuteen",
        "nimi": "Lorem ipsum 1",
        "paattymisAika": "16:00",
        "paivamaara": "2022-03-04",
        "tyyppi": "VERKOSSA",
      },
      Object {
        "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": undefined,
        "nimi": "Lorem ipsum two 1",
        "osoite": "Katu 123",
        "paattymisAika": "11:00",
        "paikka": "Kunnantalo",
        "paivamaara": "2022-04-05",
        "postinumero": "00100",
        "postitoimipaikka": "Helsinki",
        "tyyppi": "PAIKALLA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "11:00",
        "paivamaara": "2022-04-05",
        "projektiYhteysHenkilot": Array [
          "A000112",
        ],
        "tyyppi": "SOITTOAIKA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "12:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "13:00",
        "paivamaara": "2033-04-05",
        "tyyppi": "SOITTOAIKA",
      },
    ],
    "vuorovaikutusYhteysHenkilot": Array [
      "A000112",
    ],
  },
}
`;

exports[`Api should search, load and save a project 6`] = `
Object {
  "description": "saveAndVerifyAineistoSave #esittelyAineistotWithoutFirst",
  "obj": Object {
    "__typename": "Vuorovaikutus",
    "esitettavatYhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Marko",
        "organisaatio": "Kajaani",
        "puhelinnumero": "0293121213",
        "sahkoposti": "markku.koi@koi.com",
        "sukunimi": "Koi",
      },
    ],
    "esittelyaineistot": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2830496143.3575999363",
        "jarjestys": 12,
        "nimi": "new ekatiedosto_eka.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "Mikkeli",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": " Juva",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": " Savonlinna",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
    "suunnitelmaluonnokset": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
        "jarjestys": 11,
        "kategoriaId": "T1xx",
        "nimi": "new karttakuvalla_tiedosto.pdf",
        "tila": "ODOTTAA_TUONTIA",
      },
    ],
    "suunnittelumateriaali": undefined,
    "videot": Array [
      Object {
        "__typename": "Linkki",
        "nimi": "Esittely 1",
        "url": "https://video",
      },
    ],
    "vuorovaikutusJulkaisuPaiva": "2022-03-23",
    "vuorovaikutusNumero": 1,
    "vuorovaikutusTilaisuudet": Array [
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "15:00",
        "esitettavatYhteystiedot": undefined,
        "kaytettavaPalvelu": "TEAMS",
        "linkki": "https://linkki_tilaisuuteen",
        "nimi": "Lorem ipsum 1",
        "paattymisAika": "16:00",
        "paivamaara": "2022-03-04",
        "tyyppi": "VERKOSSA",
      },
      Object {
        "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": undefined,
        "nimi": "Lorem ipsum two 1",
        "osoite": "Katu 123",
        "paattymisAika": "11:00",
        "paikka": "Kunnantalo",
        "paivamaara": "2022-04-05",
        "postinumero": "00100",
        "postitoimipaikka": "Helsinki",
        "tyyppi": "PAIKALLA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "10:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "11:00",
        "paivamaara": "2022-04-05",
        "projektiYhteysHenkilot": Array [
          "A000112",
        ],
        "tyyppi": "SOITTOAIKA",
      },
      Object {
        "__typename": "VuorovaikutusTilaisuus",
        "alkamisAika": "12:00",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
        "paattymisAika": "13:00",
        "paivamaara": "2033-04-05",
        "tyyppi": "SOITTOAIKA",
      },
    ],
    "vuorovaikutusYhteysHenkilot": Array [
      "A000112",
    ],
  },
}
`;

exports[`Api should search, load and save a project 7`] = `
Object {
  "__typename": "Vuorovaikutus",
  "esitettavatYhteystiedot": Array [
    Object {
      "__typename": "Yhteystieto",
      "etunimi": "Marko",
      "organisaatio": "Kajaani",
      "puhelinnumero": "0293121213",
      "sahkoposti": "markku.koi@koi.com",
      "sukunimi": "Koi",
    },
  ],
  "esittelyaineistot": Array [
    Object {
      "__typename": "Aineisto",
      "dokumenttiOid": "1.2.246.578.5.100.2830496143.3575999363",
      "jarjestys": 12,
      "nimi": "new ekatiedosto_eka.pdf",
      "tiedosto": "/suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf",
      "tila": "VALMIS",
      "tuotu": "***unittest***",
    },
  ],
  "ilmoituksenVastaanottajat": Object {
    "__typename": "IlmoituksenVastaanottajat",
    "kunnat": Array [
      Object {
        "__typename": "KuntaVastaanottaja",
        "lahetetty": "2022-03-11T14:54",
        "nimi": "Mikkeli",
        "sahkoposti": "mikkeli@mikke.li",
      },
      Object {
        "__typename": "KuntaVastaanottaja",
        "lahetetty": "2022-03-11T14:54",
        "nimi": " Juva",
        "sahkoposti": "juva@ju.va",
      },
      Object {
        "__typename": "KuntaVastaanottaja",
        "lahetetty": "2022-03-11T14:54",
        "nimi": " Savonlinna",
        "sahkoposti": "savonlinna@savonlin.na",
      },
    ],
    "viranomaiset": Array [
      Object {
        "__typename": "ViranomaisVastaanottaja",
        "lahetetty": "2022-03-11T14:54",
        "nimi": "ETELA_SAVO_ELY",
        "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
      },
    ],
  },
  "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
  "suunnitelmaluonnokset": Array [
    Object {
      "__typename": "Aineisto",
      "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
      "jarjestys": 11,
      "kategoriaId": "T1xx",
      "nimi": "new karttakuvalla_tiedosto.pdf",
      "tiedosto": "/suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf",
      "tila": "VALMIS",
      "tuotu": "***unittest***",
    },
  ],
  "suunnittelumateriaali": undefined,
  "videot": Array [
    Object {
      "__typename": "Linkki",
      "nimi": "Esittely 1",
      "url": "https://video",
    },
  ],
  "vuorovaikutusJulkaisuPaiva": "2022-03-23",
  "vuorovaikutusNumero": 1,
  "vuorovaikutusTilaisuudet": Array [
    Object {
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "15:00",
      "esitettavatYhteystiedot": undefined,
      "kaytettavaPalvelu": "TEAMS",
      "linkki": "https://linkki_tilaisuuteen",
      "nimi": "Lorem ipsum 1",
      "paattymisAika": "16:00",
      "paivamaara": "2022-03-04",
      "tyyppi": "VERKOSSA",
    },
    Object {
      "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "10:00",
      "esitettavatYhteystiedot": undefined,
      "nimi": "Lorem ipsum two 1",
      "osoite": "Katu 123",
      "paattymisAika": "11:00",
      "paikka": "Kunnantalo",
      "paivamaara": "2022-04-05",
      "postinumero": "00100",
      "postitoimipaikka": "Helsinki",
      "tyyppi": "PAIKALLA",
    },
    Object {
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "10:00",
      "esitettavatYhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "organisaatio": "",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
          "titteli": "Projektipäällikkö",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "organisaatio": "",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
          "titteli": "Konsultti",
        },
      ],
      "nimi": "Soittoaikatilaisuuden nimi tässä",
      "paattymisAika": "11:00",
      "paivamaara": "2022-04-05",
      "projektiYhteysHenkilot": Array [
        "A000112",
      ],
      "tyyppi": "SOITTOAIKA",
    },
    Object {
      "__typename": "VuorovaikutusTilaisuus",
      "alkamisAika": "12:00",
      "esitettavatYhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "organisaatio": "",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
          "titteli": "Projektipäällikkö",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "organisaatio": "",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
          "titteli": "Konsultti",
        },
      ],
      "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
      "paattymisAika": "13:00",
      "paivamaara": "2033-04-05",
      "tyyppi": "SOITTOAIKA",
    },
  ],
  "vuorovaikutusYhteysHenkilot": Array [
    "A000112",
  ],
}
`;

exports[`Api should search, load and save a project 8`] = `
Object {
  "description": "publicProjekti ennen suunnitteluvaihetta",
  "obj": Object {
    "__typename": "ProjektiJulkinen",
    "aloitusKuulutusJulkaisut": Array [
      Object {
        "__typename": "AloitusKuulutusJulkaisuJulkinen",
        "aloituskuulutusPDFt": Object {
          "SUOMI": Object {
            "aloituskuulutusIlmoitusPDFPath": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf",
            "aloituskuulutusPDFPath": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus/T412 Aloituskuulutus.pdf",
          },
          "__typename": "AloitusKuulutusPDFt",
        },
        "hankkeenKuvaus": Object {
          "RUOTSI": "På Svenska",
          "SAAME": "Saameksi",
          "SUOMI": "Lorem Ipsum",
          "__typename": "HankkeenKuvaukset",
        },
        "kielitiedot": Object {
          "__typename": "Kielitiedot",
          "ensisijainenKieli": "SUOMI",
        },
        "kuulutusPaiva": "2022-01-02",
        "siirtyySuunnitteluVaiheeseen": "2022-01-01",
        "suunnitteluSopimus": Object {
          "__typename": "SuunnitteluSopimus",
          "email": "Joku.Jossain@vayla.fi",
          "etunimi": "Joku",
          "kunta": "Nokia",
          "logo": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelusopimus/logo.png",
          "puhelinnumero": "123",
          "sukunimi": "Jossain",
        },
        "tila": "HYVAKSYTTY",
        "velho": Object {
          "__typename": "VelhoJulkinen",
          "asiatunnusELY": undefined,
          "asiatunnusVayla": undefined,
          "kunnat": Array [
            "Helsinki",
            "Vantaa",
          ],
          "kuvaus": undefined,
          "maakunnat": Array [
            "Uusimaa",
          ],
          "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
          "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
          "tilaajaOrganisaatio": "Väylävirasto",
          "toteuttavaOrganisaatio": undefined,
          "tyyppi": "TIE",
          "vaylamuoto": Array [
            "tie",
          ],
        },
        "yhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "A-tunnus1",
            "organisaatio": "CGI Suomi Oy",
            "puhelinnumero": "123",
            "sahkoposti": "mikko.haapamki@cgi.com",
            "sukunimi": "Hassu",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
    ],
    "euRahoitus": false,
    "kielitiedot": Object {
      "__typename": "Kielitiedot",
      "ensisijainenKieli": "SUOMI",
    },
    "oid": "1.2.246.578.5.1.2978288874.2711575506",
    "paivitetty": "***unit test***",
    "projektiHenkilot": Array [
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "email": "mikko.haapamki@cgi.com",
        "id": "0",
        "nimi": "Hassu, A-tunnus1",
        "organisaatio": "CGI Suomi Oy",
        "puhelinnumero": "123",
      },
      Object {
        "__typename": "ProjektiKayttajaJulkinen",
        "email": "mikko.haapamaki@cgi.com",
        "id": "1",
        "nimi": "Hassu, A-Tunnus",
        "organisaatio": "CGI Suomi Oy",
        "puhelinnumero": "123",
      },
    ],
    "status": "ALOITUSKUULUTUS",
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": undefined,
      "kunnat": Array [
        "Helsinki",
        "Vantaa",
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        "Uusimaa",
      ],
      "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "tilaajaOrganisaatio": "Väylävirasto",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
  },
}
`;

exports[`Api should search, load and save a project 9`] = `
Object {
  "description": "projekti palaute lisätty",
  "obj": Array [
    Object {
      "__typename": "Palaute",
      "etunimi": "Matti",
      "id": "***unittest***",
      "kysymysTaiPalaute": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
      "liite": "/palautteet/***unittest***/logo.png",
      "puhelinnumero": "123456",
      "sahkoposti": "test@vayla.fi",
      "sukunimi": "Meikalainen",
      "vastaanotettu": "***unittest***",
      "yhteydenottotapaEmail": false,
      "yhteydenottotapaPuhelin": true,
    },
  ],
}
`;

exports[`Api should search, load and save a project 10`] = `
Object {
  "description": "projekti palaute otettu käsittelyyn",
  "obj": Array [
    Object {
      "__typename": "Palaute",
      "etunimi": "Matti",
      "id": "***unittest***",
      "kysymysTaiPalaute": "Lorem ipsum dolor sit amet, consectetur adipiscing elit.",
      "liite": "/palautteet/***unittest***/logo.png",
      "otettuKasittelyyn": true,
      "puhelinnumero": "123456",
      "sahkoposti": "test@vayla.fi",
      "sukunimi": "Meikalainen",
      "vastaanotettu": "***unittest***",
      "yhteydenottotapaEmail": false,
      "yhteydenottotapaPuhelin": true,
    },
  ],
}
`;

exports[`Api should search, load and save a project 11`] = `
Object {
  "description": "publicProjekti suunnitteluvaihe",
  "obj": Object {
    "__typename": "SuunnitteluVaiheJulkinen",
    "arvioSeuraavanVaiheenAlkamisesta": "huomenna",
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi suunnitteluvaihe",
      "SUOMI": "Lorem Ipsum suunnitteluvaihe",
      "__typename": "HankkeenKuvaukset",
    },
    "suunnittelunEteneminenJaKesto": "suunnitelma etenee aikataulussa ja valmistuu vuoden 2022 aikana",
    "vuorovaikutukset": Array [
      Object {
        "__typename": "VuorovaikutusJulkinen",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
        "esittelyaineistot": Array [
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2830496143.3575999363",
            "jarjestys": 12,
            "kategoriaId": undefined,
            "nimi": "new ekatiedosto_eka.pdf",
            "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf",
            "tuotu": "***unittest***",
          },
        ],
        "ilmoituksenVastaanottajat": Object {
          "__typename": "IlmoituksenVastaanottajat",
          "kunnat": Array [
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "Mikkeli",
              "sahkoposti": "mikkeli@mikke.li",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": " Juva",
              "sahkoposti": "juva@ju.va",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": " Savonlinna",
              "sahkoposti": "savonlinna@savonlin.na",
            },
          ],
          "viranomaiset": Array [
            Object {
              "__typename": "ViranomaisVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "ETELA_SAVO_ELY",
              "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
            },
          ],
        },
        "julkinen": true,
        "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
        "suunnitelmaluonnokset": Array [
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.3084966615.4150346995",
            "jarjestys": 11,
            "kategoriaId": "T1xx",
            "nimi": "new karttakuvalla_tiedosto.pdf",
            "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf",
            "tuotu": "***unittest***",
          },
        ],
        "suunnittelumateriaali": undefined,
        "videot": Array [
          Object {
            "__typename": "Linkki",
            "nimi": "Esittely 1",
            "url": "https://video",
          },
        ],
        "vuorovaikutusJulkaisuPaiva": "2022-03-23",
        "vuorovaikutusNumero": 1,
        "vuorovaikutusTilaisuudet": Array [
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "15:00",
            "esitettavatYhteystiedot": undefined,
            "kaytettavaPalvelu": "TEAMS",
            "linkki": "https://linkki_tilaisuuteen",
            "nimi": "Lorem ipsum 1",
            "paattymisAika": "16:00",
            "paivamaara": "2022-03-04",
            "projektiYhteysHenkilot": undefined,
            "tyyppi": "VERKOSSA",
          },
          Object {
            "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": undefined,
            "nimi": "Lorem ipsum two 1",
            "osoite": "Katu 123",
            "paattymisAika": "11:00",
            "paikka": "Kunnantalo",
            "paivamaara": "2022-04-05",
            "postinumero": "00100",
            "postitoimipaikka": "Helsinki",
            "projektiYhteysHenkilot": undefined,
            "tyyppi": "PAIKALLA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "11:00",
            "paivamaara": "2022-04-05",
            "projektiYhteysHenkilot": Array [
              "0",
            ],
            "tyyppi": "SOITTOAIKA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "12:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "13:00",
            "paivamaara": "2033-04-05",
            "projektiYhteysHenkilot": undefined,
            "tyyppi": "SOITTOAIKA",
          },
        ],
        "vuorovaikutusYhteysHenkilot": Array [
          "0",
        ],
        "vuorovaikutusYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "A-tunnus1",
            "organisaatio": "CGI Suomi Oy",
            "puhelinnumero": "123",
            "sahkoposti": "mikko.haapamki@cgi.com",
            "sukunimi": "Hassu",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
      Object {
        "__typename": "VuorovaikutusJulkinen",
        "esitettavatYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
        "esittelyaineistot": undefined,
        "ilmoituksenVastaanottajat": Object {
          "__typename": "IlmoituksenVastaanottajat",
          "kunnat": Array [
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "Mikkeli",
              "sahkoposti": "mikkeli@mikke.li",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": " Juva",
              "sahkoposti": "juva@ju.va",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": " Savonlinna",
              "sahkoposti": "savonlinna@savonlin.na",
            },
          ],
          "viranomaiset": Array [
            Object {
              "__typename": "ViranomaisVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "ETELA_SAVO_ELY",
              "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
            },
          ],
        },
        "kysymyksetJaPalautteetViimeistaan": "2022-03-23T23:48",
        "suunnitelmaluonnokset": undefined,
        "suunnittelumateriaali": undefined,
        "videot": Array [
          Object {
            "__typename": "Linkki",
            "nimi": "Esittely 2",
            "url": "https://video",
          },
        ],
        "vuorovaikutusJulkaisuPaiva": "2022-03-23",
        "vuorovaikutusNumero": 2,
        "vuorovaikutusTilaisuudet": Array [
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "15:00",
            "esitettavatYhteystiedot": undefined,
            "kaytettavaPalvelu": "TEAMS",
            "linkki": "https://linkki_tilaisuuteen",
            "nimi": "Lorem ipsum 2",
            "paattymisAika": "16:00",
            "paivamaara": "2022-03-04",
            "projektiYhteysHenkilot": undefined,
            "tyyppi": "VERKOSSA",
          },
          Object {
            "Saapumisohjeet": "Ensimmäinen ovi vasemmalla",
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": undefined,
            "nimi": "Lorem ipsum two 2",
            "osoite": "Katu 123",
            "paattymisAika": "11:00",
            "paikka": "Kunnantalo",
            "paivamaara": "2022-04-05",
            "postinumero": "00100",
            "postitoimipaikka": "Helsinki",
            "projektiYhteysHenkilot": undefined,
            "tyyppi": "PAIKALLA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "10:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "11:00",
            "paivamaara": "2022-04-05",
            "projektiYhteysHenkilot": Array [
              "0",
              "1",
            ],
            "tyyppi": "SOITTOAIKA",
          },
          Object {
            "__typename": "VuorovaikutusTilaisuus",
            "alkamisAika": "12:00",
            "esitettavatYhteystiedot": Array [
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Etunimi",
                "organisaatio": "",
                "puhelinnumero": "0293121213",
                "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
                "sukunimi": "Sukunimi",
                "titteli": "Projektipäällikkö",
              },
              Object {
                "__typename": "Yhteystieto",
                "etunimi": "Joku",
                "organisaatio": "",
                "puhelinnumero": "02998765",
                "sahkoposti": "Joku.Jokunen@vayla.fi",
                "sukunimi": "Jokunen",
                "titteli": "Konsultti",
              },
            ],
            "nimi": "Toisen soittoaikatilaisuuden nimi tässä",
            "paattymisAika": "13:00",
            "paivamaara": "2033-04-05",
            "projektiYhteysHenkilot": undefined,
            "tyyppi": "SOITTOAIKA",
          },
        ],
        "vuorovaikutusYhteysHenkilot": Array [
          "0",
          "1",
        ],
        "vuorovaikutusYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "A-tunnus1",
            "organisaatio": "CGI Suomi Oy",
            "puhelinnumero": "123",
            "sahkoposti": "mikko.haapamki@cgi.com",
            "sukunimi": "Hassu",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "A-Tunnus",
            "organisaatio": "CGI Suomi Oy",
            "puhelinnumero": "123",
            "sahkoposti": "mikko.haapamaki@cgi.com",
            "sukunimi": "Hassu",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Marko",
            "organisaatio": "Kajaani",
            "puhelinnumero": "0293121213",
            "sahkoposti": "markku.koi@koi.com",
            "sukunimi": "Koi",
          },
        ],
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 12`] = `
Object {
  "DistributionId": "unit-test-distribution-id",
  "InvalidationBatch": Object {
    "CallerReference": "***unittest***",
    "Paths": Object {
      "Items": Array [
        "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnitteluvaihe/vuorovaikutus_1/*",
      ],
      "Quantity": 1,
    },
  },
}
`;

exports[`Api should search, load and save a project 13`] = `
Object {
  "yllapito S3 files just after vuorovaikutus published": Object {
    "aloituskuulutus/T412 Aloituskuulutus.pdf": Object {},
    "aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf": Object {},
    "palautteet/***unittest***/logo.png": Object {},
    "suunnittelusopimus/logo.png": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/kutsu/TS Tie Yleisotilaisuus kutsu.pdf": Object {},
  },
}
`;

exports[`Api should search, load and save a project 14`] = `
Object {
  "public S3 files just after vuorovaikutus published": Object {
    "aloituskuulutus/T412 Aloituskuulutus.pdf": Object {
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf": Object {
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf": Object {
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/karttakuvalla_tiedosto.pdf": Object {
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/kutsu/TS Tie Yleisotilaisuus kutsu.pdf": Object {
      "publishDate": "2022-03-23T00:00:00+02:00",
    },
  },
}
`;

exports[`Api should search, load and save a project 15`] = `
Object {
  "DistributionId": "unit-test-distribution-id",
  "InvalidationBatch": Object {
    "CallerReference": "***unittest***",
    "Paths": Object {
      "Items": Array [
        "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnitteluvaihe/vuorovaikutus_1/*",
      ],
      "Quantity": 1,
    },
  },
}
`;

exports[`Api should search, load and save a project 16`] = `
Object {
  "yllapito S3 files vuorovaikutus publish date changed and last aineisto deleted": Object {
    "aloituskuulutus/T412 Aloituskuulutus.pdf": Object {},
    "aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf": Object {},
    "palautteet/***unittest***/logo.png": Object {},
    "suunnittelusopimus/logo.png": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/kutsu/TS Tie Yleisotilaisuus kutsu.pdf": Object {},
  },
}
`;

exports[`Api should search, load and save a project 17`] = `
Object {
  "public S3 files vuorovaikutus publish date changed and last aineisto deleted": Object {
    "aloituskuulutus/T412 Aloituskuulutus.pdf": Object {
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf": Object {
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf": Object {
      "publishDate": "2022-03-24T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/kutsu/TS Tie Yleisotilaisuus kutsu.pdf": Object {
      "publishDate": "2022-03-24T00:00:00+02:00",
    },
  },
}
`;

exports[`Api should search, load and save a project 18`] = `
Array [
  Object {
    "emailOptions": Object {
      "subject": "Valtion liikenneväylien suunnittelu: Uusi projekti perustettu ",
      "text": "Valtion liikenneväylien suunnittelu -järjestelmään on tuotu Projektivelhosta projektisi:
HASSU AUTOMAATTITESTIPROJEKTI1
Voit tarkastella projektia osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506
Saat tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
      "to": "mikko.haapamki@cgi.com",
    },
  },
  Object {
    "emailOptions": Object {
      "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus odottaa hyväksyntää ",
      "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektistasi
HASSU AUTOMAATTITESTIPROJEKTI1
on luotu aloituskuulutus, joka odottaa hyväksyntääsi.
Voit tarkastella projektia osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506
Saat tämän viestin, koska sinut on merkitty projektin projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
      "to": "mikko.haapamki@cgi.com",
    },
  },
  Object {
    "emailOptions": Object {
      "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty ",
      "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektin
HASSU AUTOMAATTITESTIPROJEKTI1
aloituskuulutus on hyväksytty.
Voit tarkastella aloituskuulutusta osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus
Saat tämän viestin, koska sinut on merkitty aloituskuulutuksen laatijaksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
      "to": "mikko.haapamki@cgi.com",
    },
  },
  Object {
    "emailOptions": Object {
      "attachments": Array [
        Object {
          "content": "***unittest***",
          "contentDisposition": "attachment",
          "contentType": "application/pdf",
          "filename": "T412 Aloituskuulutus.pdf",
        },
      ],
      "subject": "Valtion liikenneväylien suunnittelu: Aloituskuulutus hyväksytty ",
      "text": "Valtion liikenneväylien suunnittelu -järjestelmän projektin
HASSU AUTOMAATTITESTIPROJEKTI1
aloituskuulutus on hyväksytty. Liitteenä aloituskuulutus PDF-tiedostona, muistathan viedä sen asiakirjanhallintaan.

Voit tarkastella aloituskuulutusta osoitteessa https://localhost:3000/yllapito/projekti/1.2.246.578.5.1.2978288874.2711575506/aloituskuulutus

Saat tämän viestin, koska sinut on merkitty aloituskuulutuksen projektipäälliköksi. Tämä on automaattinen sähköposti, johon ei voi vastata.",
      "to": "mikko.haapamki@cgi.com",
    },
  },
  Object {
    "emailOptions": Object {
      "attachments": Array [
        Object {
          "content": "***unittest***",
          "contentDisposition": "attachment",
          "contentType": "application/pdf",
          "filename": "T412_1 Ilmoitus aloituskuulutuksesta.pdf",
        },
      ],
      "subject": "TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA ILMOITTAMINEN - HASSU AUTOMAATTITESTIPROJEKTI1",
      "text": "TOIMIVALTAISEN VIRANOMAISEN KUULUTUKSESTA ILMOITTAMINEN

HASSU AUTOMAATTITESTIPROJEKTI1

Väylävirasto ilmoittaa, että se julkaisee liikennejärjestelmästä ja maanteistä annetun lain sekä hallintolain 62 a §:n mukaisesti tietoverkossaan kuulutuksen, joka koskee suunnittelun ja maastotöiden aloittamista. Väylävirasto saattaa asian tiedoksi julkisesti kuuluttamalla vähintään 30 päivän ajan siten, kuin julkisesta kuulutuksesta säädetään hallintolaissa, sekä julkaisemalla kuulutuksen yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Kuulutus julkaistaan 2.1.2022, Väyläviraston tietoverkossa osoitteessa https://vayla.fi/kuulutukset.

Väylävirasto pyytää suunnittelualueen kuntia julkisemaan julkaisemaan tietoverkossaan (sähköinen ilmoitustaulu) liitteenä olevan ilmoituksen kuuluttamisesta. Ilmoitus tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kuulutuksen julkaisupäivänä. Ilmoituksen nähtävillä oloa ei tarvitse todentaa Väylävirastolle.

Lorem Ipsum

Väylävirasto käsittelee suunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Halutessasi tietää tarkemmin väyläsuunnittelun tietosuojakäytänteistä, tutustu verkkosivujen tietosuojaosioon osoitteessa https://vayla.fi/tietosuoja.

Lisätietoja antaa
CGI Suomi Oy, A-tunnus1 Hassu, puh. 123, mikko.haapamki@cgi.com
Kajaani, Marko Koi, puh. 0293121213, markku.koi@koi.com",
      "to": Array [],
    },
  },
  Object {
    "emailOptions": Object {
      "subject": "Suunnitelmaan on tullut palautetta",
      "text": "Suunnitelmaan on tullut palautetta: https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu",
      "to": "mikko.haapamaki@cgi.com",
    },
  },
  Object {
    "emailOptions": Object {
      "attachments": Array [
        Object {
          "content": "***unittest***",
          "contentDisposition": "attachment",
          "contentType": "application/pdf",
          "filename": "TS Tie Yleisotilaisuus kutsu.pdf",
        },
      ],
      "subject": "SUUNNITELMAN LAATIJAN KUTSUSTA YLEISÖTILAISUUTEEN ILMOITTAMINEN",
      "text": "HASSU AUTOMAATTITESTIPROJEKTI1, Helsinki ja  Vantaa

Väylävirasto laatii liikennejärjestelmästä ja maanteistä annetun lain (LjMTL, 503/2005) mukaista tiesuunnitelmaa HASSU AUTOMAATTITESTIPROJEKTI1.

Väylävirasto ilmoittaa, että se julkaisee tietoverkossaan kutsun, joka koskee otsikossa mainitun tiesuunnitelman yleisötilaisuutta (laki liikennejärjestelmästä ja maanteistä 27 §).

Kutsu julkaistaan 23.3.2022 väyläviraston tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Väylävirasto pyytää Helsinki,  Vantaa ja Väylävirastoa julkaisemaan liitteenä olevan kutsun tietoverkossaan. Kutsu tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kutsun julkaisupäivänä. Kutsun julkaisemista ei tarvitse todentaa Väylävirastolle.

Väylävirasto käsittelee tiesuunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Lisätietoja väyläsuunnittelun tietosuojakäytänteistä on saatavilla verkkosivujen tietosuojaosiossa osoitteessa https://www.vayla.fi/tietosuoja.

Lisätietoja antaa:
Kajaani, Marko Koi, puhelin 0293121213 ja sähköposti markku.koi@koi.com.
CGI Suomi Oy, A-Tunnus1 Hassu, puhelin 123 ja sähköposti mikko.haapamki@cgi.com.

LIITTEET	Kutsu tiedotus-/yleisötilaisuuteen (20T)",
      "to": "mikkeli@mikke.li",
    },
  },
  Object {
    "emailOptions": Object {
      "attachments": Array [
        Object {
          "content": "***unittest***",
          "contentDisposition": "attachment",
          "contentType": "application/pdf",
          "filename": "TS Tie Yleisotilaisuus kutsu.pdf",
        },
      ],
      "subject": "SUUNNITELMAN LAATIJAN KUTSUSTA YLEISÖTILAISUUTEEN ILMOITTAMINEN",
      "text": "HASSU AUTOMAATTITESTIPROJEKTI1, Helsinki ja  Vantaa

Väylävirasto laatii liikennejärjestelmästä ja maanteistä annetun lain (LjMTL, 503/2005) mukaista tiesuunnitelmaa HASSU AUTOMAATTITESTIPROJEKTI1.

Väylävirasto ilmoittaa, että se julkaisee tietoverkossaan kutsun, joka koskee otsikossa mainitun tiesuunnitelman yleisötilaisuutta (laki liikennejärjestelmästä ja maanteistä 27 §).

Kutsu julkaistaan 23.3.2022 väyläviraston tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Väylävirasto pyytää Helsinki,  Vantaa ja Väylävirastoa julkaisemaan liitteenä olevan kutsun tietoverkossaan. Kutsu tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kutsun julkaisupäivänä. Kutsun julkaisemista ei tarvitse todentaa Väylävirastolle.

Väylävirasto käsittelee tiesuunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Lisätietoja väyläsuunnittelun tietosuojakäytänteistä on saatavilla verkkosivujen tietosuojaosiossa osoitteessa https://www.vayla.fi/tietosuoja.

Lisätietoja antaa:
Kajaani, Marko Koi, puhelin 0293121213 ja sähköposti markku.koi@koi.com.
CGI Suomi Oy, A-Tunnus1 Hassu, puhelin 123 ja sähköposti mikko.haapamki@cgi.com.

LIITTEET	Kutsu tiedotus-/yleisötilaisuuteen (20T)",
      "to": "juva@ju.va",
    },
  },
  Object {
    "emailOptions": Object {
      "attachments": Array [
        Object {
          "content": "***unittest***",
          "contentDisposition": "attachment",
          "contentType": "application/pdf",
          "filename": "TS Tie Yleisotilaisuus kutsu.pdf",
        },
      ],
      "subject": "SUUNNITELMAN LAATIJAN KUTSUSTA YLEISÖTILAISUUTEEN ILMOITTAMINEN",
      "text": "HASSU AUTOMAATTITESTIPROJEKTI1, Helsinki ja  Vantaa

Väylävirasto laatii liikennejärjestelmästä ja maanteistä annetun lain (LjMTL, 503/2005) mukaista tiesuunnitelmaa HASSU AUTOMAATTITESTIPROJEKTI1.

Väylävirasto ilmoittaa, että se julkaisee tietoverkossaan kutsun, joka koskee otsikossa mainitun tiesuunnitelman yleisötilaisuutta (laki liikennejärjestelmästä ja maanteistä 27 §).

Kutsu julkaistaan 23.3.2022 väyläviraston tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Väylävirasto pyytää Helsinki,  Vantaa ja Väylävirastoa julkaisemaan liitteenä olevan kutsun tietoverkossaan. Kutsu tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kutsun julkaisupäivänä. Kutsun julkaisemista ei tarvitse todentaa Väylävirastolle.

Väylävirasto käsittelee tiesuunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Lisätietoja väyläsuunnittelun tietosuojakäytänteistä on saatavilla verkkosivujen tietosuojaosiossa osoitteessa https://www.vayla.fi/tietosuoja.

Lisätietoja antaa:
Kajaani, Marko Koi, puhelin 0293121213 ja sähköposti markku.koi@koi.com.
CGI Suomi Oy, A-Tunnus1 Hassu, puhelin 123 ja sähköposti mikko.haapamki@cgi.com.

LIITTEET	Kutsu tiedotus-/yleisötilaisuuteen (20T)",
      "to": "savonlinna@savonlin.na",
    },
  },
  Object {
    "emailOptions": Object {
      "attachments": Array [
        Object {
          "content": "***unittest***",
          "contentDisposition": "attachment",
          "contentType": "application/pdf",
          "filename": "TS Tie Yleisotilaisuus kutsu.pdf",
        },
      ],
      "subject": "SUUNNITELMAN LAATIJAN KUTSUSTA YLEISÖTILAISUUTEEN ILMOITTAMINEN",
      "text": "HASSU AUTOMAATTITESTIPROJEKTI1, Helsinki ja  Vantaa

Väylävirasto laatii liikennejärjestelmästä ja maanteistä annetun lain (LjMTL, 503/2005) mukaista tiesuunnitelmaa HASSU AUTOMAATTITESTIPROJEKTI1.

Väylävirasto ilmoittaa, että se julkaisee tietoverkossaan kutsun, joka koskee otsikossa mainitun tiesuunnitelman yleisötilaisuutta (laki liikennejärjestelmästä ja maanteistä 27 §).

Kutsu julkaistaan 23.3.2022 väyläviraston tietoverkossa osoitteessa https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu sekä yhdessä tai useammassa alueella yleisesti ilmestyvässä sanomalehdessä.

Väylävirasto pyytää Helsinki,  Vantaa ja Väylävirastoa julkaisemaan liitteenä olevan kutsun tietoverkossaan. Kutsu tulee julkaista tietoverkossa mahdollisuuksien mukaan edellä mainittuna kutsun julkaisupäivänä. Kutsun julkaisemista ei tarvitse todentaa Väylävirastolle.

Väylävirasto käsittelee tiesuunnitelman laatimiseen liittyen tarpeellisia henkilötietoja. Lisätietoja väyläsuunnittelun tietosuojakäytänteistä on saatavilla verkkosivujen tietosuojaosiossa osoitteessa https://www.vayla.fi/tietosuoja.

Lisätietoja antaa:
Kajaani, Marko Koi, puhelin 0293121213 ja sähköposti markku.koi@koi.com.
CGI Suomi Oy, A-Tunnus1 Hassu, puhelin 123 ja sähköposti mikko.haapamki@cgi.com.

LIITTEET	Kutsu tiedotus-/yleisötilaisuuteen (20T)",
      "to": "kirjaamo.etela-savo@ely-keskus.fi",
    },
  },
  Object {
    "emailOptions": Object {
      "subject": "Suunnitelmaan on tullut palautetta",
      "text": "Suunnitelmaan on tullut palautetta: https://localhost:3000/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/suunnittelu",
      "to": "mikko.haapamki@cgi.com",
    },
  },
]
`;

exports[`Api should search, load and save a project 19`] = `
Object {
  "description": "testNahtavillaOloPerustiedot",
  "obj": Object {
    "__typename": "NahtavillaoloVaihe",
    "aineistoNahtavilla": undefined,
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi nahtavillaoloVaihe",
      "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
      "__typename": "HankkeenKuvaukset",
    },
    "id": 1,
    "ilmoituksenVastaanottajat": Object {
      "__typename": "IlmoituksenVastaanottajat",
      "kunnat": Array [
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "Mikkeli",
          "sahkoposti": "mikkeli@mikke.li",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": " Juva",
          "sahkoposti": "juva@ju.va",
        },
        Object {
          "__typename": "KuntaVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": " Savonlinna",
          "sahkoposti": "savonlinna@savonlin.na",
        },
      ],
      "viranomaiset": Array [
        Object {
          "__typename": "ViranomaisVastaanottaja",
          "lahetetty": "2022-03-11T14:54",
          "nimi": "ETELA_SAVO_ELY",
          "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
        },
      ],
    },
    "kuulutusPaiva": "2022-06-07",
    "kuulutusVaihePaattyyPaiva": "2042-06-07",
    "kuulutusYhteysHenkilot": Array [
      "A000112",
    ],
    "kuulutusYhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Etunimi",
        "organisaatio": "",
        "puhelinnumero": "0293121213",
        "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
        "sukunimi": "Sukunimi",
        "titteli": "Projektipäällikkö",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Joku",
        "organisaatio": "",
        "puhelinnumero": "02998765",
        "sahkoposti": "Joku.Jokunen@vayla.fi",
        "sukunimi": "Jokunen",
        "titteli": "Konsultti",
      },
    ],
    "lisaAineisto": undefined,
    "lisaAineistoParametrit": Object {
      "__typename": "LisaAineistoParametrit",
      "hash": "***unittest***",
      "nahtavillaoloVaiheId": 1,
      "poistumisPaiva": "***unittest***",
    },
    "muistutusoikeusPaattyyPaiva": "2042-06-08",
    "nahtavillaoloPDFt": undefined,
  },
}
`;

exports[`Api should search, load and save a project 20`] = `
Object {
  "description": "testImportNahtavillaoloAineistot",
  "obj": Object {
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2281391320.546836829",
          "jarjestys": 1,
          "kategoriaId": "T2xx",
          "nimi": "T222 Meluesteiden periaatekuvat.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2400417287.1486592341",
          "jarjestys": 2,
          "kategoriaId": "T2xx",
          "nimi": "T213 Teiden hallinnolsten järjestelyjen kartat.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2661373170.3358971896",
          "jarjestys": 3,
          "kategoriaId": "T2xx",
          "nimi": "T224 Siltataulukko.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2717425363.3158441393",
          "jarjestys": 4,
          "kategoriaId": "T2xx",
          "nimi": "T211 Piirustusmerkinnät.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2723303646.77167902",
          "jarjestys": 5,
          "kategoriaId": "T2xx",
          "nimi": "T212 Yleiskartta.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "hankkeenKuvaus": Object {
        "SAAME": "Saameksi nahtavillaoloVaihe",
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "HankkeenKuvaukset",
      },
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "Mikkeli",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": " Juva",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": " Savonlinna",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-07",
      "kuulutusVaihePaattyyPaiva": "2042-06-07",
      "kuulutusYhteysHenkilot": Array [
        "A000112",
      ],
      "kuulutusYhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "organisaatio": "",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
          "titteli": "Projektipäällikkö",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "organisaatio": "",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
          "titteli": "Konsultti",
        },
      ],
      "lisaAineisto": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2303050596.2160380418",
          "jarjestys": 1,
          "nimi": "tokatiedosto_toka.pdf",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "lisaAineistoParametrit": Object {
        "__typename": "LisaAineistoParametrit",
        "hash": "***unittest***",
        "nahtavillaoloVaiheId": 1,
        "poistumisPaiva": "***unittest***",
      },
      "muistutusoikeusPaattyyPaiva": "2042-06-08",
      "nahtavillaoloPDFt": undefined,
    },
  },
}
`;

exports[`Api should search, load and save a project 21`] = `
Object {
  "description": "lisaAineisto",
  "obj": Object {
    "aineistot": Array [
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 1,
        "kategoriaId": "T2xx",
        "linkki": "***unittest***",
        "nimi": "T222 Meluesteiden periaatekuvat.txt",
      },
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 2,
        "kategoriaId": "T2xx",
        "linkki": "***unittest***",
        "nimi": "T213 Teiden hallinnolsten järjestelyjen kartat.txt",
      },
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 3,
        "kategoriaId": "T2xx",
        "linkki": "***unittest***",
        "nimi": "T224 Siltataulukko.txt",
      },
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 4,
        "kategoriaId": "T2xx",
        "linkki": "***unittest***",
        "nimi": "T211 Piirustusmerkinnät.txt",
      },
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 5,
        "kategoriaId": "T2xx",
        "linkki": "***unittest***",
        "nimi": "T212 Yleiskartta.txt",
      },
    ],
    "lisaAineistot": Array [
      Object {
        "__typename": "LisaAineisto",
        "jarjestys": 1,
        "kategoriaId": undefined,
        "linkki": "***unittest***",
        "nimi": "tokatiedosto_toka.pdf",
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 22`] = `
Object {
  "description": "testNahtavillaOloAfterApproval",
  "obj": Object {
    "nahtavillaoloVaihe": Object {
      "__typename": "NahtavillaoloVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2281391320.546836829",
          "jarjestys": 1,
          "kategoriaId": "T2xx",
          "nimi": "T222 Meluesteiden periaatekuvat.txt",
          "tiedosto": "/nahtavillaolo/1/T222 Meluesteiden periaatekuvat.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2400417287.1486592341",
          "jarjestys": 2,
          "kategoriaId": "T2xx",
          "nimi": "T213 Teiden hallinnolsten järjestelyjen kartat.txt",
          "tiedosto": "/nahtavillaolo/1/T213 Teiden hallinnolsten järjestelyjen kartat.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2661373170.3358971896",
          "jarjestys": 3,
          "kategoriaId": "T2xx",
          "nimi": "T224 Siltataulukko.txt",
          "tiedosto": "/nahtavillaolo/1/T224 Siltataulukko.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2717425363.3158441393",
          "jarjestys": 4,
          "kategoriaId": "T2xx",
          "nimi": "T211 Piirustusmerkinnät.txt",
          "tiedosto": "/nahtavillaolo/1/T211 Piirustusmerkinnät.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2723303646.77167902",
          "jarjestys": 5,
          "kategoriaId": "T2xx",
          "nimi": "T212 Yleiskartta.txt",
          "tiedosto": "/nahtavillaolo/1/T212 Yleiskartta.txt",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "hankkeenKuvaus": Object {
        "SAAME": "Saameksi nahtavillaoloVaihe",
        "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
        "__typename": "HankkeenKuvaukset",
      },
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "Mikkeli",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": " Juva",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": " Savonlinna",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusPaiva": "2022-06-07",
      "kuulutusVaihePaattyyPaiva": "2042-06-07",
      "kuulutusYhteysHenkilot": Array [
        "A000112",
      ],
      "kuulutusYhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "organisaatio": "",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
          "titteli": "Projektipäällikkö",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "organisaatio": "",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
          "titteli": "Konsultti",
        },
      ],
      "lisaAineisto": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2303050596.2160380418",
          "jarjestys": 1,
          "nimi": "tokatiedosto_toka.pdf",
          "tiedosto": "/nahtavillaolo/1/tokatiedosto_toka.pdf",
          "tila": "VALMIS",
          "tuotu": "***unittest***",
        },
      ],
      "lisaAineistoParametrit": Object {
        "__typename": "LisaAineistoParametrit",
        "hash": "***unittest***",
        "nahtavillaoloVaiheId": 1,
        "poistumisPaiva": "***unittest***",
      },
      "muistutusoikeusPaattyyPaiva": "2042-06-08",
      "nahtavillaoloPDFt": undefined,
    },
    "nahtavillaoloVaiheJulkaisut": Array [
      Object {
        "__typename": "NahtavillaoloVaiheJulkaisu",
        "aineistoNahtavilla": Array [
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2281391320.546836829",
            "jarjestys": 1,
            "kategoriaId": "T2xx",
            "nimi": "T222 Meluesteiden periaatekuvat.txt",
            "tiedosto": "/nahtavillaolo/1/T222 Meluesteiden periaatekuvat.txt",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2400417287.1486592341",
            "jarjestys": 2,
            "kategoriaId": "T2xx",
            "nimi": "T213 Teiden hallinnolsten järjestelyjen kartat.txt",
            "tiedosto": "/nahtavillaolo/1/T213 Teiden hallinnolsten järjestelyjen kartat.txt",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2661373170.3358971896",
            "jarjestys": 3,
            "kategoriaId": "T2xx",
            "nimi": "T224 Siltataulukko.txt",
            "tiedosto": "/nahtavillaolo/1/T224 Siltataulukko.txt",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2717425363.3158441393",
            "jarjestys": 4,
            "kategoriaId": "T2xx",
            "nimi": "T211 Piirustusmerkinnät.txt",
            "tiedosto": "/nahtavillaolo/1/T211 Piirustusmerkinnät.txt",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2723303646.77167902",
            "jarjestys": 5,
            "kategoriaId": "T2xx",
            "nimi": "T212 Yleiskartta.txt",
            "tiedosto": "/nahtavillaolo/1/T212 Yleiskartta.txt",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
        ],
        "hankkeenKuvaus": Object {
          "SAAME": "Saameksi nahtavillaoloVaihe",
          "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
          "__typename": "HankkeenKuvaukset",
        },
        "hyvaksyja": "A000112",
        "id": 1,
        "ilmoituksenVastaanottajat": Object {
          "__typename": "IlmoituksenVastaanottajat",
          "kunnat": Array [
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "Mikkeli",
              "sahkoposti": "mikkeli@mikke.li",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": " Juva",
              "sahkoposti": "juva@ju.va",
            },
            Object {
              "__typename": "KuntaVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": " Savonlinna",
              "sahkoposti": "savonlinna@savonlin.na",
            },
          ],
          "viranomaiset": Array [
            Object {
              "__typename": "ViranomaisVastaanottaja",
              "lahetetty": "2022-03-11T14:54",
              "nimi": "ETELA_SAVO_ELY",
              "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
            },
          ],
        },
        "kielitiedot": Object {
          "__typename": "Kielitiedot",
          "ensisijainenKieli": "SUOMI",
        },
        "kuulutusPaiva": "2022-06-07",
        "kuulutusVaihePaattyyPaiva": "2042-06-07",
        "kuulutusYhteysHenkilot": Array [
          "A000112",
        ],
        "kuulutusYhteystiedot": Array [
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Etunimi",
            "organisaatio": "",
            "puhelinnumero": "0293121213",
            "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
            "sukunimi": "Sukunimi",
            "titteli": "Projektipäällikkö",
          },
          Object {
            "__typename": "Yhteystieto",
            "etunimi": "Joku",
            "organisaatio": "",
            "puhelinnumero": "02998765",
            "sahkoposti": "Joku.Jokunen@vayla.fi",
            "sukunimi": "Jokunen",
            "titteli": "Konsultti",
          },
        ],
        "lisaAineisto": Array [
          Object {
            "__typename": "Aineisto",
            "dokumenttiOid": "1.2.246.578.5.100.2303050596.2160380418",
            "jarjestys": 1,
            "nimi": "tokatiedosto_toka.pdf",
            "tiedosto": "/nahtavillaolo/1/tokatiedosto_toka.pdf",
            "tila": "VALMIS",
            "tuotu": "***unittest***",
          },
        ],
        "muistutusoikeusPaattyyPaiva": "2042-06-08",
        "muokkaaja": "A000112",
        "nahtavillaoloPDFt": undefined,
        "tila": "HYVAKSYTTY",
        "velho": Object {
          "__typename": "Velho",
          "kunnat": Array [
            "Helsinki",
            " Vantaa",
          ],
          "linkki": null,
          "maakunnat": Array [
            "Uusimaa",
          ],
          "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
          "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
          "tilaajaOrganisaatio": "Väylävirasto",
          "tyyppi": "TIE",
          "vastuuhenkilonEmail": "mikko.haapamki@cgi.com",
          "vaylamuoto": Array [
            "tie",
          ],
        },
      },
    ],
  },
}
`;

exports[`Api should search, load and save a project 23`] = `
Object {
  "description": "publicProjektiNahtavillaOloJulkinenAfterApproval",
  "obj": Object {
    "__typename": "NahtavillaoloVaiheJulkaisuJulkinen",
    "aineistoNahtavilla": Array [
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2281391320.546836829",
        "jarjestys": 1,
        "kategoriaId": "T2xx",
        "nimi": "T222 Meluesteiden periaatekuvat.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/T222 Meluesteiden periaatekuvat.txt",
        "tuotu": "***unittest***",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2400417287.1486592341",
        "jarjestys": 2,
        "kategoriaId": "T2xx",
        "nimi": "T213 Teiden hallinnolsten järjestelyjen kartat.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/T213 Teiden hallinnolsten järjestelyjen kartat.txt",
        "tuotu": "***unittest***",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2661373170.3358971896",
        "jarjestys": 3,
        "kategoriaId": "T2xx",
        "nimi": "T224 Siltataulukko.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/T224 Siltataulukko.txt",
        "tuotu": "***unittest***",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2717425363.3158441393",
        "jarjestys": 4,
        "kategoriaId": "T2xx",
        "nimi": "T211 Piirustusmerkinnät.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/T211 Piirustusmerkinnät.txt",
        "tuotu": "***unittest***",
      },
      Object {
        "__typename": "Aineisto",
        "dokumenttiOid": "1.2.246.578.5.100.2723303646.77167902",
        "jarjestys": 5,
        "kategoriaId": "T2xx",
        "nimi": "T212 Yleiskartta.txt",
        "tiedosto": "/tiedostot/suunnitelma/1.2.246.578.5.1.2978288874.2711575506/nahtavillaolo/T212 Yleiskartta.txt",
        "tuotu": "***unittest***",
      },
    ],
    "hankkeenKuvaus": Object {
      "SAAME": "Saameksi nahtavillaoloVaihe",
      "SUOMI": "Lorem Ipsum nahtavillaoloVaihe",
      "__typename": "HankkeenKuvaukset",
    },
    "kuulutusPaiva": "2022-06-07",
    "kuulutusVaihePaattyyPaiva": "2042-06-07",
    "kuulutusYhteysHenkilot": Array [
      "0",
    ],
    "kuulutusYhteystiedot": Array [
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Etunimi",
        "organisaatio": "",
        "puhelinnumero": "0293121213",
        "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
        "sukunimi": "Sukunimi",
        "titteli": "Projektipäällikkö",
      },
      Object {
        "__typename": "Yhteystieto",
        "etunimi": "Joku",
        "organisaatio": "",
        "puhelinnumero": "02998765",
        "sahkoposti": "Joku.Jokunen@vayla.fi",
        "sukunimi": "Jokunen",
        "titteli": "Konsultti",
      },
    ],
    "muistutusoikeusPaattyyPaiva": "2042-06-08",
    "velho": Object {
      "__typename": "VelhoJulkinen",
      "asiatunnusELY": undefined,
      "asiatunnusVayla": undefined,
      "kunnat": Array [
        "Helsinki",
        "Vantaa",
      ],
      "kuvaus": undefined,
      "maakunnat": Array [
        "Uusimaa",
      ],
      "nimi": "HASSU AUTOMAATTITESTIPROJEKTI1",
      "suunnittelustaVastaavaViranomainen": "VAYLAVIRASTO",
      "tilaajaOrganisaatio": "Väylävirasto",
      "toteuttavaOrganisaatio": undefined,
      "tyyppi": "TIE",
      "vaylamuoto": Array [
        "tie",
      ],
    },
  },
}
`;

exports[`Api should search, load and save a project 24`] = `
Object {
  "yllapito S3 files Nahtavillaolo published": Object {
    "aloituskuulutus/T412 Aloituskuulutus.pdf": Object {},
    "aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf": Object {},
    "nahtavillaolo/1/T211 Piirustusmerkinnät.txt": Object {},
    "nahtavillaolo/1/T212 Yleiskartta.txt": Object {},
    "nahtavillaolo/1/T213 Teiden hallinnolsten järjestelyjen kartat.txt": Object {},
    "nahtavillaolo/1/T222 Meluesteiden periaatekuvat.txt": Object {},
    "nahtavillaolo/1/T224 Siltataulukko.txt": Object {},
    "nahtavillaolo/1/tokatiedosto_toka.pdf": Object {},
    "palautteet/***unittest***/logo.png": Object {},
    "suunnittelusopimus/logo.png": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf": Object {},
    "suunnitteluvaihe/vuorovaikutus_1/kutsu/TS Tie Yleisotilaisuus kutsu.pdf": Object {},
  },
}
`;

exports[`Api should search, load and save a project 25`] = `
Object {
  "public S3 files Nahtavillaolo published": Object {
    "aloituskuulutus/T412 Aloituskuulutus.pdf": Object {
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "aloituskuulutus/T412_1 Ilmoitus aloituskuulutuksesta.pdf": Object {
      "publishDate": "2022-01-02T00:00:00+02:00",
    },
    "nahtavillaolo/T211 Piirustusmerkinnät.txt": Object {
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/T212 Yleiskartta.txt": Object {
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/T213 Teiden hallinnolsten järjestelyjen kartat.txt": Object {
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/T222 Meluesteiden periaatekuvat.txt": Object {
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/T224 Siltataulukko.txt": Object {
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "nahtavillaolo/tokatiedosto_toka.pdf": Object {
      "publishDate": "2022-06-07T00:00:00+03:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/aineisto/ekatiedosto_eka.pdf": Object {
      "publishDate": "2022-03-24T00:00:00+02:00",
    },
    "suunnitteluvaihe/vuorovaikutus_1/kutsu/TS Tie Yleisotilaisuus kutsu.pdf": Object {
      "publishDate": "2022-03-24T00:00:00+02:00",
    },
  },
}
`;

exports[`Api should search, load and save a project 26`] = `
Object {
  "description": "testImportHyvaksymisPaatosAineistot",
  "obj": Object {
    "hyvaksymisVaihe": Object {
      "__typename": "HyvaksymisVaihe",
      "aineistoNahtavilla": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2160495081.1282714556",
          "jarjestys": 1,
          "kategoriaId": "T1xx",
          "nimi": "T113 TS Esite.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "hallintoOikeus": "HAMEENLINNA",
      "hyvaksymisPaatos": Array [
        Object {
          "__typename": "Aineisto",
          "dokumenttiOid": "1.2.246.578.5.100.2147637429.4251089044",
          "jarjestys": 1,
          "nimi": "TYHJÄ.txt",
          "tila": "ODOTTAA_TUONTIA",
        },
      ],
      "hyvaksymisVaihePDFt": undefined,
      "id": 1,
      "ilmoituksenVastaanottajat": Object {
        "__typename": "IlmoituksenVastaanottajat",
        "kunnat": Array [
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "Mikkeli",
            "sahkoposti": "mikkeli@mikke.li",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": " Juva",
            "sahkoposti": "juva@ju.va",
          },
          Object {
            "__typename": "KuntaVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": " Savonlinna",
            "sahkoposti": "savonlinna@savonlin.na",
          },
        ],
        "viranomaiset": Array [
          Object {
            "__typename": "ViranomaisVastaanottaja",
            "lahetetty": "2022-03-11T14:54",
            "nimi": "ETELA_SAVO_ELY",
            "sahkoposti": "kirjaamo.etela-savo@ely-keskus.fi",
          },
        ],
      },
      "kuulutusYhteysHenkilot": Array [
        "A000112",
      ],
      "kuulutusYhteystiedot": Array [
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Etunimi",
          "organisaatio": "",
          "puhelinnumero": "0293121213",
          "sahkoposti": "Etunimi.Sukunimi@vayla.fi",
          "sukunimi": "Sukunimi",
          "titteli": "Projektipäällikkö",
        },
        Object {
          "__typename": "Yhteystieto",
          "etunimi": "Joku",
          "organisaatio": "",
          "puhelinnumero": "02998765",
          "sahkoposti": "Joku.Jokunen@vayla.fi",
          "sukunimi": "Jokunen",
          "titteli": "Konsultti",
        },
      ],
    },
  },
}
`;

exports[`Api should search, load and save a project 27`] = `
Object {
  "yllapito S3 files Hyvaksymispaatos created": Object {
    "/1/T113 TS Esite.txt": Object {},
    "/1/hyvaksymispaatos/TYHJÄ.txt": Object {},
  },
}
`;
